--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "devDependencies": {
     "@tinacms/cli": "^0.60.12",
+    "@types/react": "17.0.40",
     "eslint": "7",
-    "eslint-config-next": "12.0.3"
+    "eslint-config-next": "12.0.3",
+    "typescript": "^4.6.4"
   }
 }
